src/test/ui/suggestions/suggest-labels.stderr
error[E0426]: use of undeclared label `'fo`
  --> $DIR/suggest-labels.rs:14:15
   |
14 |         break 'fo;
   |               ^^^ did you mean `'foo`?

error[E0426]: use of undeclared label `'bor`
  --> $DIR/suggest-labels.rs:18:18
   |
18 |         continue 'bor;
   |                  ^^^^ did you mean `'bar`?

error[E0426]: use of undeclared label `'longlable`
  --> $DIR/suggest-labels.rs:23:19
   |
23 |             break 'longlable;
   |                   ^^^^^^^^^^ did you mean `'longlabel1`?

error: aborting due to 3 previous errors

